--- a/nlp4dh/latex/custom.bib
+++ b/nlp4dh/latex/custom.bib
@@ -700,14 +700,6 @@
   year={2022}
 }
 
-@inproceedings{dobreski2019remodeling,
-  title={Remodeling archival metadata descriptions for linked archives},
-  author={Dobreski, Brian and Park, Jaihyun and Leathers, Alicia and Qin, Jian},
-  booktitle={International Conference on Dublin Core and Metadata Applications},
-  pages={1--11},
-  year={2019}
-}
-
 @inproceedings{park2023quantitative,
   title={A Quantitative Discourse Analysis of Asian Workers in the US Historical Newspapers},
   author={Park, Jaihyun and Cordell, Ryan},
@@ -740,4 +732,12 @@
   pages={01655515241238405},
   year={2024},
   publisher={SAGE Publications Sage UK: London, England}
+}
+
+@inproceedings{dobreski2020remodeling,
+  title={Remodeling archival metadata descriptions for linked archives},
+  author={Dobreski, Brian and Park, Jaihyun and Leathers, Alicia and Qin, Jian},
+  booktitle={Proceedings of the international conference on dublin core and metadata applications},
+  year={2020},
+  organization={Dublin Core Metadata Initiative}
 }
