--- a/nlp4dh/latex/acl_latex.tex
+++ b/nlp4dh/latex/acl_latex.tex
@@ -95,8 +95,7 @@ This study investigates the usage of ``slave'' and ``servant'' in the 19th centu
 
 In the United States before the Civil War, free Black Americans and white abolitionists challenged the moral grounds of slavery using a range of means and media, from newspapers that exposed the horrors that enslaved people were subjected to in the American South, to first-hand accounts of former slaves recounting their suffering and their struggle for freedom, to fictional narratives that sought to levy readers’ sympathies toward Black Americans into 
 advocacy against slavery. 
-Pro-slavery advocates used the same media to undermine abolitionists’ charges and to defend slavery, arguing not simply for its necessity but for its rectitude, 
-even its sanctity. 
+Pro-slavery advocates used the same media to undermine abolitionists’ charges and to defend slavery, arguing not simply for its necessity but for its rectitude, even its sanctity. 
 Pro-slavery rhetoric often relied on a domestic, sentimental account of slaves’ lives that sidestepped the brutal realities of forced labor by focusing instead on supposed familial bonds between ``house slaves'' and the white women and children who owned them, the religious devotion advocates claimed slavery inculcated in enslaved African Americans, or the reported gratitude of slaves for their condition. 
 Such myths underlay everything from newspaper editorials to pro-slavery novels, such as the ``Anti-Tom'' genre that arose to counter the popularity of Harriet Beecher Stowe’s bestseller, \textit{Uncle Tom’s Cabin}. 
 In works such as \textit{Uncle Robin in His Cabin in Virginia, And Top Without One in Boston} —the central premise of which is outlined in the title — pro-slavery writers sought to contrast an idyllic depiction of Southern slavery 
