--- a/nlp4dh/latex/acl_latex.tex
+++ b/nlp4dh/latex/acl_latex.tex
@@ -49,7 +49,7 @@
 %
 % and set <dim> to something 5cm or larger.
 
-\title{A data-driven investigation of euphemistic language: \\
+\title{A Data-driven Investigation of Euphemistic Language: \\
 Comparing the usage of “slave” and “servant” \\ 
 in 19th century US newspapers}
 
@@ -98,8 +98,8 @@ advocacy against slavery.
 Pro-slavery advocates used the same media to undermine abolitionists’ charges and to defend slavery, arguing not simply for its necessity but for its rectitude, even its sanctity. 
 Pro-slavery rhetoric often relied on a domestic, sentimental account of slaves’ lives that sidestepped the brutal realities of forced labor by focusing instead on supposed familial bonds between ``house slaves'' and the white women and children who owned them, the religious devotion advocates claimed slavery inculcated in enslaved African Americans, or the reported gratitude of slaves for their condition. 
 Such myths underlay everything from newspaper editorials to pro-slavery novels, such as the ``Anti-Tom'' genre that arose to counter the popularity of Harriet Beecher Stowe’s bestseller, \textit{Uncle Tom’s Cabin}. 
-In works such as \textit{Uncle Robin in His Cabin in Virginia, And Top Without One in Boston} —the central premise of which is outlined in the title — pro-slavery writers sought to contrast an idyllic depiction of Southern slavery 
-— what they euphemistically termed “our peculiar institution” — with industrial horrors in the North. 
+In works such as \textit{Uncle Robin in His Cabin in Virginia, And Top Without One in Boston} — the central premise of which is outlined in the title — pro-slavery writers sought to contrast an idyllic depiction of Southern slavery 
+— what they euphemistically termed ``our peculiar institution'' — with industrial horrors in the North. 
 
 This research investigates this euphemistic rhetoric through an investigation of two closely linked but rhetorically contrasting terms in Civil War-era US newspapers: slave and servant. Both terms were used to refer to enslaved Black Americans, but they were employed in distinct ways. 
 While the word ``slave'' engaged with the slave system directly, marking discourse about legal and political debates around slavery, ``servant'' was more often used euphemistically to identify enslaved people who could be more easily cast into the domestic, sentimental narratives espoused by pro-slavery advocates. 
@@ -107,7 +107,7 @@ The latter term can refer to different forms of servitude, including both enslav
 % The corpus we explore in this study helps us better understand 
 % how even politically opposed newspapers participated in 
 % intersubjective modes of discourse. 
-% Our goal is not to make claims about the lived experience of Black Americans during this period, but to understand the rhetorical constructions that communicated ideas about enslaved Black Americans to white newspaper readers. 
+Our goal is not to make claims about the lived experience of Black Americans during this period, but to understand the rhetorical constructions that communicated ideas about enslaved Black Americans to white newspaper readers. 
 
 In newspaper writing, ``slave'' is a more generic word that is used to discuss both enslaved Black Americans, as well as to reference legal and political debates around the institution of slavery itself.
 ``Servant'' is a more specific term most often used to describe slaves who filled domestic—and less obviously abusive—roles in Southern homes. 
