--- a/nlp4dh/latex/acl_latex.tex
+++ b/nlp4dh/latex/acl_latex.tex
@@ -110,8 +110,8 @@ The latter term can refer to different forms of servitude, including both enslav
 Our goal is not to make claims about the lived experience of Black Americans during this period, but to understand the rhetorical constructions that communicated ideas about enslaved Black Americans to white newspaper readers. 
 
 In newspaper writing, ``slave'' is a more generic word that is used to discuss both enslaved Black Americans, as well as to reference legal and political debates around the institution of slavery itself.
-``Servant'' is a more specific term most often used to describe slaves who filled domestic—and less obviously abusive—roles in Southern homes. 
-Servants were described as better-dressed and well fed, and typically lived in the attic or basement of their master\`s house \citep{malcolm1990malcolm}, where they ostensibly enjoyed a better quality of life \citep{gatewood2000aristocrats}.
+``Servant'' is a more specific term most often used to describe slaves who filled domestic — and less obviously abusive — roles in Southern homes. 
+Servants were described as better-dressed and well fed, and typically lived in the attic or basement of their master's house \citep{malcolm1990malcolm}, where they ostensibly enjoyed a better quality of life \citep{gatewood2000aristocrats}.
 % Using these two words we explore how newspapers run by 
 % white editors `stereotyped' enslaved Black Americans, 
 % even as those editors often used literal stereotypes 
