--- a/nlp4dh/latex/acl_latex.tex
+++ b/nlp4dh/latex/acl_latex.tex
@@ -119,8 +119,8 @@ Servants were described as better-dressed and well fed, and typically lived in t
 
 Any type of text published through newspapers could shape the discourse in the public sphere for editors and readers as newspapers played a role in constituting \textit{imagined communities} in the 19th century \citep{anderson2006imagined}. 
 Whether newspapers supported abolition or defended slavery, they nonetheless filtered their understanding of Black Americans through stereotypical filters, while typically excluding Black Americans themselves from their discourse\footnote{For more on Black-owned- and -operated newspapers, see \textit{The Black Newspaper and the Chosen Nation} \citep{fagan2016black}.
-In another article \textit{``Chronicling White America,''} \citeauthor{fagan2016chronicling} describes how the collection processes for the Library of Congress's Chronicling America collection have often excluded Black newspapers \citep{fagan2016chronicling}. In part due to this facet of our data, our analyses focus on the stereotypical discourses about Black Americans within white newspapers - to include newspapers that were abolitionist in stance, but run and operated by white editors. 
-In future, work, we will delve into how this discourse shifts in newspapers run by Black editors}.
+In another article \textit{``Chronicling White America,''} \citeauthor{fagan2016chronicling} describes how the collection processes for the Library of Congress's Chronicling America collection have often excluded Black newspapers \citep{fagan2016chronicling}. In part due to this facet of our data, our analyses focus on the stereotypical discourses about Black Americans within white newspapers - to include newspapers that were abolitionist in stance, but run and operated by white editors}. 
+% In future, work, we will delve into how this discourse shifts in newspapers run by Black editors}.
 In this paper, we present a computational approach to studying the use of these two terms in a corpus of 19th century newspapers and seek to answer two primary research questions:
 
 \begin{itemize}
@@ -140,7 +140,7 @@ Scholars of American history, literature, and culture have argued persuasively t
 Drawing on data from the Library of Congress's US Newspaper Directory, US newspapers grew ``from a few hundred papers in 1800 to over 12,000 by the end of the century.'' \cite{cordell2020going} 
 Beyond the simple scale of this shift, the variety, price, style, and intended audiences for newspapers shifted dramatically during this same period, such that the term ``newspaper'' suddenly encompassed a much wider range of periodicals than existed at the beginning of the century, including merchant papers, penny papers, illustrated family papers, and much more.
 
-This rapidly-growing medium was at the time both highly partisan and strident, as editors debated politiciansand each other about political and social issues. 
+This rapidly-growing medium was at the time both highly partisan and strident, as editors debated politicians and each other about political and social issues. 
 The voice of newspapers in the 19th century was strongly affiliated with parties and particular political action groups, as modern ideas of journalistic impartiality did not evolve until the early 20th century \citep{pasley_tyranny_2002}. 
 Similarly, \citet{baldasty_commercialization_1992} argued newspapers during the antebellum period formed close ties with political parties and factions to gain financial support. Newspapers spoke from the perspective of a ``network author'' that positioned the voice of any individual newspaper within the collective operations of larger political and social discourse \citep{cordell_reprinting_2015}.
 Because newspapers have power to frame and manipulate discourse around political and social issues \citep{willaert2022tracking}, researchers have much to learn about how newspaper discourse operated at scale, or how it operated between different regions or time periods.
