--- a/nlp4dh/latex/acl_latex.tex
+++ b/nlp4dh/latex/acl_latex.tex
@@ -152,7 +152,7 @@ This points to a primary challenge facing scholars seeking to use historical new
 % and narrative analysis \citep{gabrial2004melancholy, narayan_slavery_2020} 
 
 Though some data-driven work on historical newspapers has appeared in recent years, the scale of digital collections argues for more research that will supplement the findings and analysis from qualitative scholars \citep{gabrial2004melancholy,narayan_slavery_2020}. 
-Scholars in digital humanities have taken advantage of digitized text to study culture \cite{griebel2024locating} and history of the past. 
+Scholars in digital humanities have used digitized texts to study culture \cite{griebel2024locating}, applying computational models built on diverse datasets \cite{park2022raison} and to explore historical change over time. 
 Especially, newspapers as a source of data attracted computational humanities researchers and they leveraged computational methods \citep{park2023quantitative} such as topic modeling \cite{hengchen_data-driven_2021,klein_exploratory_2015} and word embedding models \cite{soni2021abolitionist} to learn about the past. 
 % \citet{hengchen_data-driven_2021} used topic modeling to understand changes in immigrant discourse from large newspaper collections. 
 % Similarly, \citet{soni2021abolitionist} used a diachronic embedding model to trace the trajectory of changes in the semantics of words from abolitionist newspapers.
